[package]
name = "hack-stack"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "hack-assemble"
path = "src/bin/hack_assemble.rs"

[[bin]]
name = "hack-vm-translate"
path = "src/bin/hack_vm_translate.rs"

[[bin]]
name = "hack-emulate"
path = "src/bin/hack_emulate.rs"

[[bin]]
name = "jack-analyze"
path = "src/bin/jack_analyze.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
